--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "concat-map": "^0.0.1",
     "cors": "^2.8.5",
     "debug": "^3.2.7",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^8.2.1",
     "fill-range": "^7.0.1",
     "formidable": "^3.5.1",
     "glob-parent": "^5.1.2",
